# automated-biological-evidence-generation-in-drug-discovery

./: .gitignore  CODEOWNERS  Makefile  README.md  pyproject.toml  tox.ini
.circleci/: config.yml
data/: config-predict.properties  config-train.properties  parkinson_disease_explanations_filter.txt  test.txt
data/parkinson-disease-filter/: genes.txt  pathways.txt  predictions-short-list.txt  predictions.txt
java/: LICENSE.md  pom.xml
java/src/main/java/de/unima/ki/anyburl/: Apply.java  Eval.java  LearnReinforced.java  RuleEngine.java  Settings.java
java/src/main/java/de/unima/ki/anyburl/algorithm/: PathSampler.java
java/src/main/java/de/unima/ki/anyburl/data/: AnnotatedTriple.java  SampledPairedResultSet.java  Triple.java  TripleSet.java
java/src/main/java/de/unima/ki/anyburl/eval/: AggregateEvaluation.java  Candidate.java  ComparativeEvaluation.java  CompletionResult.java  DiffRank1.java  GoldStandard.java  HitsAtK.java  RandomPrediction.java  ResultSet.java  ResultSetStats.java  TestHardnessEstimator.java  XRYEvaluation.java
java/src/main/java/de/unima/ki/anyburl/exceptions/: TimeOutException.java  Timer.java
java/src/test/java/de/unima/ki/anyburl/: ApplyTest.java
python/abegidd/: __init__.py  entities.py  expanders.py  filters.py  generator.py  graph.py  iterables.py  path_scorer.py  system.py
python/abegidd/cli/: chains.py  chains_filter.py  predict.py  train.py
python/abegidd/io/: __init__.py  anyburl.py  chains.py
python/tests/: test_expanders.py  test_filters.py  test_generator.py
python/tests/cli/: test_cli_chains_filter.py
(+34 files in other folders)
